language/move-lang/tests/move_check/typing/module_call_missing_function.exp
error: 

    ┌── tests/move_check/typing/module_call_missing_function.move:13:14 ───
    │
 13 │         Self.fooo();
    │              ^^^^ Unbound function 'fooo' in module '0x1.M'
    │

error: 

    ┌── tests/move_check/typing/module_call_missing_function.move:14:9 ───
    │
 14 │         foooo();
    │         ^^^^^ Unbound function: 'foooo'
    │

error: 

    ┌── tests/move_check/typing/module_call_missing_function.move:15:11 ───
    │
 15 │         X.foooooo();
    │           ^^^^^^^ Unbound function 'foooooo' in module '0x1.X'
    │

